HTML and CSS Validator fixes

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <title>Portfolio</title>
@@ -15,7 +15,7 @@
 
     </header>
 
-    <section id="banner" class="category-row">
+    <div id="banner" class="category-row">
 
         <nav>
           <a href="index.html#3d-projects">3D Art</a>
@@ -27,7 +27,7 @@
         <div class="name-title">
           <h1>ABOUT ME</h1>
         </div>
-    </section>
+    </div>
 
     <section id="about" class="category-row-about">
       <div class="my-name">
@@ -58,7 +58,7 @@
       </div>
     </section>
 
-    <section id="footer" class="category-row">
+    <footer id="footer" class="category-row">
       <div id="first-link" class="footer-link">
         <a href="styleguide.html">
           Style Guide
@@ -74,7 +74,7 @@
           Git
         </a>
       </div>
-    </section>
+    </footer>
 
   </body>
 </html>
