--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <title>Portfolio</title>
@@ -15,7 +15,7 @@
 
     </header>
 
-    <section id="banner" class="category-row">
+    <div id="banner" class="category-row">
         <nav>
           <a href="index.html#3d-projects">3D Art</a>
           <a href="index.html#graphic-projects">Graphic Design</a>
@@ -26,7 +26,7 @@
         <div class="name-title">
           <h1>3D ART</h1>
         </div>
-    </section>
+    </div>
 
     <section id="3d-projects" class="project-grid">
       <div class="grid-item">
@@ -69,7 +69,7 @@
       </div>
     </section>
 
-    <section id="graphic-projects" class="project-grid" class="project-grid-one-item">
+    <section id="graphic-projects" class="project-grid">
       <div class="grid-item">
         <div class="project-image">
           <a href="project3.html"><img src="img/cardBack.png" alt="Business Card"></a>
@@ -102,7 +102,7 @@
 
     </section>
 
-    <section id="footer" class="category-row">
+    <footer id="footer" class="category-row">
       <div id="first-link" class="footer-link">
         <a href="styleguide.html">
           Style Guide
@@ -118,7 +118,7 @@
           Git
         </a>
       </div>
-    </section>
+    </footer>
 
   </body>
 </html>
