--- a/project1.html
+++ b/project1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <title>Portfolio</title>
@@ -16,7 +16,7 @@
 
     </header>
 
-    <section id="banner" class="category-row">
+    <div id="banner" class="category-row">
         <nav>
           <a href="index.html#3d-projects">3D Art</a>
           <a href="index.html#graphic-projects">Graphic Design</a>
@@ -27,7 +27,7 @@
         <div class="name-title">
           <h1>ORGANIC MODEL - Alien Character</h1>
         </div>
-    </section>
+    </div>
 
     <section id="project1" class="project-detail">
       <div class="finished-project">
@@ -66,7 +66,7 @@
           <i class="fas fa-arrow-right"></i>
         </div>
 
-        <div id="process-one" class="process-img">
+        <div id="process-four" class="process-img">
           <img src="img/alienProcess/process4.png" alt="Alien Character Process 4">
           <p>Added more subdivisions to mesh to create smoothness</p>
           <i class="fas fa-arrow-right"></i>
@@ -84,7 +84,7 @@
       </div>
     </div>
 
-    <section id="footer" class="category-row">
+    <footer id="footer" class="category-row">
       <div id="first-link" class="footer-link">
         <a href="styleguide.html">
           Style Guide
@@ -100,7 +100,7 @@
           Git
         </a>
       </div>
-    </section>
+    </footer>
 
   </body>
 </html>
