--- a/project2.html
+++ b/project2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <title>Portfolio</title>
@@ -16,7 +16,7 @@
 
     </header>
 
-    <section id="banner" class="category-row">
+    <div id="banner" class="category-row">
         <nav>
           <a href="index.html#3d-projects">3D Art</a>
           <a href="index.html#graphic-projects">Graphic Design</a>
@@ -27,7 +27,7 @@
         <div class="name-title">
           <h1>HARD SURFACE MODEL - Futuristic Gun</h1>
         </div>
-    </section>
+    </div>
 
     <section id="process2" class="project-detail">
       <div class="finished-project">
@@ -75,7 +75,7 @@
       </div>
     </div>
 
-    <section id="footer" class="category-row">
+    <footer id="footer" class="category-row">
       <div id="first-link" class="footer-link">
         <a href="styleguide.html">
           Style Guide
@@ -91,7 +91,7 @@
           Git
         </a>
       </div>
-    </section>
+    </footer>
 
   </body>
 </html>
