--- a/references.html
+++ b/references.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <title>Portfolio</title>
@@ -15,7 +15,7 @@
 
     </header>
 
-    <section id="banner" class="category-row">
+    <div id="banner" class="category-row">
         <!-- <nav>
           <a href="index.html#3d-projects">3D Art</a>
           <a href="index.html#graphic-projects">Graphic Design</a>
@@ -29,9 +29,9 @@
           <li>Sengjoon. (Portfolio). (2020). <strong>Reference [Portfolio]</strong>. Retrieved from <a href="#">https://www.sengjoon.com/</a>.</li>
           <li>Font Awesome. (Website Icons). (Unknown). <strong>HTML [Icons]</strong>. Retrieved from <a href="#">https://fontawesome.com//</a>.</li>
         </ul>
-    </section>
+    </div>
 
-    <section id="footer" class="category-row">
+    <footer id="footer" class="category-row">
       <div id="first-link" class="footer-link">
         <a href="index.html">
           Portfolio
@@ -47,7 +47,7 @@
           Git
         </a>
       </div>
-    </section>
+    </footer>
 
   </body>
 </html>
