--- a/styleguide.html
+++ b/styleguide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <title>Portfolio Style Guide</title>
@@ -14,7 +14,7 @@
 
     </header>
 
-    <section id="banner" class="category-row">
+    <div id="banner" class="category-row">
         <nav>
           <a href="#colors">Colors</a>
           <a href="#typography">Typography</a>
@@ -24,7 +24,7 @@
           <!-- <a href="index.html">Portfolio</a> -->
         </nav>
         <h1>STYLE GUIDE</h1>
-    </section>
+    </div>
 
     <section id="colors" class="category-row">
       <h2>Colors</h2>
@@ -59,7 +59,7 @@
 
       <div class="item-wrapper">
         <div class="heading-wrapper">
-          <div id="top-heading">
+          <div class="top-heading">
             <h1>Heading 1</h1>
           </div>
           <h3>Uses</h3>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="heading-wrapper">
-          <div id="top-heading">
+          <div class="top-heading">
             <h2>Heading 2</h2>
           </div>
           <h3>Uses</h3>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="heading-wrapper">
-          <div id="top-heading">
+          <div class="top-heading">
             <h3>Heading 3</h3>
           </div>
           <h3>Uses</h3>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="heading-wrapper">
-          <div id="top-heading">
+          <div class="top-heading">
             <p>Paragraph</p>
           </div>
           <h3>Uses</h3>
@@ -172,7 +172,7 @@
       </div>
     </section>
 
-    <section id="footer" class="category-row">
+    <footer id="footer" class="category-row">
       <div id="first-link" class="footer-link">
         <a href="index.html">
           Portfolio
@@ -188,7 +188,7 @@
           Git
         </a>
       </div>
-    </section>
+    </footer>
 
   </body>
 </html>
