--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <title>Portfolio</title>
@@ -15,7 +15,7 @@
 
     </header>
 
-    <section id="banner" class="category-row">
+    <div id="banner" class="category-row">
         <nav>
           <a href="index.html#3d-projects">3D Art</a>
           <a href="index.html#graphic-projects">Graphic Design</a>
@@ -26,7 +26,7 @@
         <div class="name-title">
           <h1>CONTACT</h1>
         </div>
-    </section>
+    </div>
 
     <section id="contact" class="project-grid">
       <div class="contact-wrapper">
@@ -41,7 +41,7 @@
       </div>
     </section>
 
-    <section id="footer" class="category-row">
+    <footer id="footer" class="category-row">
       <div id="first-link" class="footer-link">
         <a href="styleguide.html">
           Style Guide
@@ -57,7 +57,7 @@
           Git
         </a>
       </div>
-    </section>
+    </footer>
 
   </body>
 </html>
