--- a/project2.html
+++ b/project2.html
@@ -53,14 +53,14 @@
 
         <div id="process-two" class="process-img">
           <img src="img/gunProcess/process1.png" alt="Process 1">
-          <p>Box modelled base shape of gun</p>
+          <p>Box modelled the overall base shape of gun</p>
           <i class="fas fa-arrow-right"></i>
         </div>
 
         <div id="process-three" class="process-img">
           <img src="img/gunProcess/process2.png" alt="Process 2">
-          <p>Adjusted thickness and added details</p>
-          <i class="fas fa-arrow-right"></i>
+          <p>Adjusted thickness and added decorative details</p>
+          <i class="fas fa-genderless"></i>
         </div>
 
       </div>
