--- a/project1.html
+++ b/project1.html
@@ -69,7 +69,7 @@
         <div id="process-four" class="process-img">
           <img src="img/alienProcess/process4.png" alt="Alien Character Process 4">
           <p>Added more subdivisions to mesh to create smoothness</p>
-          <i class="fas fa-arrow-right"></i>
+          <i class="fas fa-genderless"></i>
         </div>
 
       </div>
