--- a/project3.html
+++ b/project3.html
@@ -50,7 +50,7 @@
 
         <div id="process-one" class="process-img">
           <img src="img/cardProcess/process1.png" alt="Business Card Process 1">
-          <p>Layout chosen by client</p>
+          <p>Provided client with layouts with this design chosen </p>
           <i class="fas fa-arrow-right"></i>
         </div>
 
@@ -69,7 +69,7 @@
         <div id="process-four" class="process-img">
           <img src="img/cardProcess/process4.png" alt="Business Card Process 4">
           <p>Back of business card designed with company logo on white</p>
-          <i class="fas fa-arrow-right"></i>
+          <i class="fas fa-genderless"></i>
         </div>
 
       </div>
