Fixed Hover Images
index.html fixed hover images relative to images

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 
     <section id="3d-projects" class="project-grid">
       <div class="grid-item">
-        <div class="project-image">
-          <a href="project1.html"><img src="img/portfolioAlien.png" alt="Alien Character"></a>
-        </div>
+          <img src="img/portfolioAlien.png" alt="Alien Character">
         <a href="project1.html">
           <div class="overlay-one">
             <div class="overlay-title">
@@ -50,7 +48,7 @@
           <a href="project2.html"><img src="img/portfolioGun.png" alt="Futuristic Gun"></a>
         </div>
         <a href="project2.html">
-          <div class="overlay-two">
+          <div class="overlay-one">
             <div class="overlay-title">
               <h2>Hard Surface Model</h2>
             </div>
@@ -75,7 +73,7 @@
           <a href="project3.html"><img src="img/cardBack.png" alt="Business Card"></a>
         </div>
         <a href="project3.html">
-          <div class="overlay-three">
+          <div class="overlay-one">
             <div class="overlay-title">
               <h2>Business Card</h2>
             </div>
