--- a/styleguide.html
+++ b/styleguide.html
@@ -152,12 +152,13 @@
     </section>
 
     <section id="images" class="category-row">
-      <h2>Interactive Images</h2>
+      <div class="heading-section">
+        <h2>Interactive Images</h2>
+      </div>
       <div class="item-wrapper">
         <div class="grid-item">
-          <div class="project-image">
-            <a href="#images"><img src="img/portfolioAlien.png" alt="Alien Character"></a>
-          </div>
+          <img src="img/portfolioAlien.png" alt="Alien Character">
+          <a href="#">
             <div class="overlay-one">
               <div class="overlay-title">
                 <h2>Project Type</h2>
@@ -166,6 +167,7 @@
                 <h3>Project Name</h3>
               </div>
             </div>
+          </a>
         </div>
       </div>
     </section>
