Button color change & text on hover

--- a/graphics.html
+++ b/graphics.html
@@ -48,7 +48,7 @@
           <a href="project2.html"><img src="img/cardBack.png" alt="Futuristic Gun"></a>
         </div>
         <a href="project2.html">
-          <div class="overlay-one">
+          <div class="overlay-two">
             <div class="overlay-title">
               <h2>Business Card</h2>
             </div>
