--- a/graphics.html
+++ b/graphics.html
@@ -17,8 +17,8 @@
 
     <div id="banner" class="category-row">
         <nav>
-          <a href="index.html#3d-projects">3D Art</a>
-          <a href="index.html#graphic-projects">Graphic Design</a>
+          <a href="index.html">3D Art</a>
+          <a href="graphics.html">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <!-- <a href="styleguide.html">Style Guide</a> -->
@@ -30,8 +30,11 @@
 
     <section id="3d-projects" class="project-grid">
       <div class="grid-item">
-          <img src="img/portfolioPoster.png" alt="Alien Character">
-        <a href="project1.html">
+          <a href="project4.html">
+            <div class="clickable">
+              <img src="img/portfolioPoster.png" alt="Poster">
+            </div>
+          </a>
           <div class="overlay-one">
             <div class="overlay-title">
               <h2>Poster</h2>
@@ -40,14 +43,14 @@
               <h3>Dessert Company</h3>
             </div>
           </div>
-        </a>
       </div>
 
       <div class="grid-item">
-        <div class="project-image">
-          <a href="project2.html"><img src="img/cardBack.png" alt="Futuristic Gun"></a>
-        </div>
-        <a href="project2.html">
+          <a href="project3.html">
+            <div class="clickable">
+              <img src="img/cardBack.png" alt="Business Card">
+            </div>
+          </a>
           <div class="overlay-two">
             <div class="overlay-title">
               <h2>Business Card</h2>
@@ -56,7 +59,6 @@
               <h3>Dessert Company</h3>
             </div>
           </div>
-        </a>
       </div>
     </section>
 
