--- a/project4.html
+++ b/project4.html
@@ -25,24 +25,24 @@
           <!-- <a href="styleguide.html">Style Guide</a> -->
         </nav>
         <div class="name-title">
-          <h1>ORGANIC MODEL - Alien Character</h1>
+          <h1>POSTER - Dessert Company</h1>
         </div>
     </div>
 
     <section id="project1" class="project-detail">
       <div class="finished-project">
-        <img src="img/portfolioAlien.png" alt="Alien Character">
+        <img src="img/portfolioPoster.png" alt="Alien Character">
       </div>
       <div class="programs">
         <h3>Programs Used</h3>
-        <p>ZBrush, Maya</p>
-        <p>2019</p>
+        <p>Illustrator</p>
+        <p>2021</p>
       </div>
       <div class="write-up">
-        <p>The story behind this project was to create a low poly alien character to fit a futuristic space environment where the character’s role is a galactic mercenary.
+        <p>The poster was designed as advertisement for Asomi Mochi, a Japanese dessert company that opens seasonally at the Richmond Night Market. The design was made to capture the essence of a night market while also incorporating personal elements of the client such as their cat.
         </p>
         <p>
-        It was my first time using ZBrush to sculpt, which made it difficult to navigate the interface and understand the tools. To overcome this, I practiced sculpting separate similar shapes that replicated the structural elements of the character. Through this practice I was able to sculpt the final character more efficiently with a stronger understanding of ZBrush.
+        A challenge that arose from designing such a minimalist poster was creating an interesting art piece that informs the audience that the image takes place at a night market and ensuring that the Japanese dessert is the focal point.
       </p>
       </div>
 
@@ -50,26 +50,20 @@
       <div class="process-wrapper">
 
         <div id="process-one" class="process-img">
-          <img src="img/alienProcess/process1.png" alt="Alien Character Process 1">
-          <p>Sculpting the character from a sphere in ZBrush</p>
+          <img src="img/posterProcess/process1.png" alt="Poster Line Art">
+          <p>Create line art from sketch and establish the overall scene</p>
           <i class="fas fa-arrow-right"></i>
         </div>
 
         <div id="process-two" class="process-img">
-          <img src="img/alienProcess/process2.png" alt="Alien Character Process 2">
-          <p>ZRemesher to retopologize triangles into squares</p>
+          <img src="img/posterProcess/process2.png" alt="Base Color Scheme">
+          <p>Applied base colors from chosen scheme</p>
           <i class="fas fa-arrow-right"></i>
         </div>
 
         <div id="process-three" class="process-img">
-          <img src="img/alienProcess/process3.png" alt="Alien Character Process 3">
-          <p>Modelled armour based off topology of character in Maya</p>
-          <i class="fas fa-arrow-right"></i>
-        </div>
-
-        <div id="process-four" class="process-img">
-          <img src="img/alienProcess/process4.png" alt="Alien Character Process 4">
-          <p>Added more subdivisions to mesh to create smoothness</p>
+          <img src="img/posterProcess/process3.png" alt="Outline, Shading, Highlights">
+          <p>Add dimension through subtle outlines, shading, and highlights</p>
           <i class="fas fa-circle"></i>
         </div>
 
@@ -78,10 +72,10 @@
 
     <div class="project-buttons">
       <div class="left-button">
-        <a href="project4.html" class="button-cancel">Previous Project</a>
+        <a href="project3.html" class="button-cancel">Previous Project</a>
       </div>
       <div class="right-button">
-        <a href="project2.html" class="button-confirm">Next Project</a>
+        <a href="project1.html" class="button-confirm">Next Project</a>
       </div>
     </div>
 
