--- a/styleguide.html
+++ b/styleguide.html
@@ -21,7 +21,7 @@
           <a href="#navigation">Navigation</a>
           <a href="#buttons">Buttons</a>
           <a href="#images">Interactive Images</a>
-          <!-- <a href="index.html">Portfolio</a> -->
+          <a href="index.html">Portfolio</a>
         </nav>
         <h1>STYLE GUIDE</h1>
     </div>
@@ -33,20 +33,20 @@
         <!-- <div id="first-color" class="color-block">
           <p>#d1cd92</p>
         </div> -->
+        <div id="first-color" class="color-block">
+          <p>#6179d4</p>
+        </div>
         <div id="second-color" class="color-block">
-          <p>#065ec2</p>
+          <p>#56667a</p>
         </div>
         <div id="third-color" class="color-block">
           <p>#70788a</p>
         </div>
-        <div id="ab-color" class="color-block">
-          <p>#ababab</p>
-        </div>
         <div id="fourth-color" class="color-block">
-          <p>#b2b6bf</p>
+          <p>#6e727a</p>
         </div>
         <div id="fifth-color" class="color-block">
-          <p>#ffffff</p>
+          <p>#808287</p>
         </div>
       </div>
 
@@ -157,17 +157,19 @@
       </div>
       <div class="item-wrapper">
         <div class="grid-item">
-          <img src="img/portfolioAlien.png" alt="Alien Character">
           <a href="#">
-            <div class="overlay-one">
-              <div class="overlay-title">
-                <h2>Project Type</h2>
-              </div>
-              <div class="overlay-description">
-                <h3>Project Name</h3>
-              </div>
+            <div class="clickable">
+              <img src="img/portfolioAlien.png" alt="Alien Character">
             </div>
           </a>
+          <div class="overlay-one">
+            <div class="overlay-title">
+              <h2>Project Type</h2>
+            </div>
+            <div class="overlay-description">
+              <h3>Project Name</h3>
+            </div>
+          </div>
         </div>
       </div>
     </section>
