--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
     <div id="banner" class="category-row">
 
         <nav>
-          <a href="index.html#3d-projects">3D Art</a>
-          <a href="index.html#graphic-projects">Graphic Design</a>
+          <a href="index.html">3D Art</a>
+          <a href="graphics.html">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <!-- <a href="styleguide.html">Style Guide</a> -->
@@ -52,9 +52,9 @@
         <p>ZBrush</p>
         <p>Photoshop</p>
         <p>Illustrator</p>
+        <p>Figma</p>
         <p>Premiere</p>
         <p>HTML & CSS</p>
-        <p>Figma</p>
       </div>
     </section>
 
