--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
 
     <div id="banner" class="category-row">
         <nav>
-          <a href="index.html#3d-projects">3D Art</a>
-          <a href="index.html#graphic-projects">Graphic Design</a>
+          <a href="index.html">3D Art</a>
+          <a href="graphics.html">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <!-- <a href="styleguide.html">Style Guide</a> -->
