--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <div id="banner" class="category-row">
         <nav>
-          <a href="index.html#3d-projects">3D Art</a>
-          <a href="index.html#graphic-projects">Graphic Design</a>
+          <a href="index.html">3D Art</a>
+          <a href="graphics.html">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <!-- <a href="styleguide.html">Style Guide</a> -->
@@ -30,8 +30,11 @@
 
     <section id="3d-projects" class="project-grid">
       <div class="grid-item">
-          <img src="img/portfolioAlien.png" alt="Alien Character">
-        <a href="project1.html">
+          <a href="project1.html">
+            <div class="clickable">
+              <img src="img/portfolioAlien.png" alt="Alien Character">
+            </div>
+          </a>
           <div class="overlay-one">
             <div class="overlay-title">
               <h2>Organic Model</h2>
@@ -40,15 +43,15 @@
               <h3>Alien Character</h3>
             </div>
           </div>
-        </a>
       </div>
 
       <div class="grid-item">
-        <div class="project-image">
-          <a href="project2.html"><img src="img/portfolioGun.png" alt="Futuristic Gun"></a>
-        </div>
-        <a href="project2.html">
-          <div class="overlay-one">
+          <a href="project2.html">
+            <div class="clickable">
+              <img src="img/portfolioGun.png" alt="Futuristic Gun">
+            </div>
+          </a>
+          <div class="overlay-two">
             <div class="overlay-title">
               <h2>Hard Surface Model</h2>
             </div>
@@ -56,18 +59,17 @@
               <h3>Futuristic Gun</h3>
             </div>
           </div>
-        </a>
       </div>
     </section>
 
 
-    <section id="graphic-title" class="category-row">
+    <!-- <section id="graphic-title" class="category-row">
       <div class="name-title">
         <h1>GRAPHIC DESIGN</h1>
       </div>
-    </section>
+    </section> -->
 
-    <section id="graphic-projects" class="project-grid">
+    <!-- <section id="graphic-projects" class="project-grid">
       <div class="grid-item">
         <div class="project-image">
           <a href="project3.html"><img src="img/cardBack.png" alt="Business Card"></a>
@@ -82,7 +84,7 @@
             </div>
           </div>
         </a>
-      </div>
+      </div> -->
 
       <!-- <div class="grid-item">
         <div class="project-image">
