--- a/project2.html
+++ b/project2.html
@@ -18,8 +18,8 @@
 
     <div id="banner" class="category-row">
         <nav>
-          <a href="index.html#3d-projects">3D Art</a>
-          <a href="index.html#graphic-projects">Graphic Design</a>
+          <a href="index.html">3D Art</a>
+          <a href="graphics.html">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <!-- <a href="styleguide.html">Style Guide</a> -->
@@ -36,6 +36,7 @@
       <div class="programs">
         <h3>Programs Used</h3>
         <p>Maya</p>
+        <p>2019</p>
       </div>
       <div class="write-up">
         <p>This model was designed as secondary weapon for a futuristic space military. I discovered a fitting illustration from Pinterest, which I referenced to create an interpreted low poly model.</p>
@@ -60,7 +61,7 @@
         <div id="process-three" class="process-img">
           <img src="img/gunProcess/process2.png" alt="Process 2">
           <p>Adjusted thickness and added decorative details</p>
-          <i class="fas fa-genderless"></i>
+          <i class="fas fa-circle"></i>
         </div>
 
       </div>
