--- a/project3.html
+++ b/project3.html
@@ -18,8 +18,8 @@
 
     <div id="banner" class="category-row">
         <nav>
-          <a href="index.html#3d-projects">3D Art</a>
-          <a href="index.html#graphic-projects">Graphic Design</a>
+          <a href="index.html">3D Art</a>
+          <a href="graphics.html">Graphic Design</a>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <!-- <a href="styleguide.html">Style Guide</a> -->
@@ -39,6 +39,7 @@
       <div class="programs">
         <h3>Programs Used</h3>
         <p>Illustrator</p>
+        <p>2018</p>
       </div>
       <div class="write-up">
         <p>This business card was designed for the owner of a Japanese dessert company. The client requested for a minimalist design that presented information efficiently with an adequate amount of white space.</p>
@@ -69,7 +70,7 @@
         <div id="process-four" class="process-img">
           <img src="img/cardProcess/process4.png" alt="Business Card Process 4">
           <p>Back of business card designed with company logo on white</p>
-          <i class="fas fa-genderless"></i>
+          <i class="fas fa-circle"></i>
         </div>
 
       </div>
@@ -80,7 +81,7 @@
         <a href="project2.html" class="button-cancel">Previous Project</a>
       </div>
       <div class="right-button">
-        <a href="project1.html" class="button-confirm">Next Project</a>
+        <a href="project4.html" class="button-confirm">Next Project</a>
       </div>
     </div>
 
