Logo, Bio Write-up, Skills Updated

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       </div>
       <div class="bio-wrapper">
         <div class="biography">
-          <p>I am a 3D artist and graphic designer based in Vancouver, BC. I am currently finishing my Bachelors of Arts Degree at Simon Fraser University in the School of Interactive Arts and Technology. The vast styles of 3D art intrigue me, as I enjoy expanding my creativity by designing unique 3D models to fit into their destined environments.</p>
+          <p>I am a 3D artist and graphic designer based in Vancouver, BC. I have completed my Bachelor of Arts Degree at Simon Fraser University in the School of Interactive Arts and Technology with a focus in Media Arts. I enjoy expanding my creativity through graphic design and 3D modelling as it allows me to express my artistic skills that I have learned from years of schooling and personal projects.</p>
         </div>
       </div>
       <div class="programs">
@@ -52,6 +52,7 @@
         <p>ZBrush</p>
         <p>Photoshop</p>
         <p>Illustrator</p>
+        <p>InDesign</p>
         <p>Figma</p>
         <p>Premiere</p>
         <p>HTML & CSS</p>
