--- a/graphics.html
+++ b/graphics.html
@@ -30,22 +30,6 @@
 
     <section id="3d-projects" class="project-grid">
       <div class="grid-item">
-          <a href="project4.html">
-            <div class="clickable">
-              <img src="img/portfolioPoster.png" alt="Poster">
-            </div>
-          </a>
-          <div class="overlay-one">
-            <div class="overlay-title">
-              <h2>Poster</h2>
-            </div>
-            <div class="overlay-description">
-              <h3>Dessert Company</h3>
-            </div>
-          </div>
-      </div>
-
-      <div class="grid-item">
           <a href="project3.html">
             <div class="clickable">
               <img src="img/cardBack.png" alt="Business Card">
@@ -54,6 +38,38 @@
           <div class="overlay-two">
             <div class="overlay-title">
               <h2>Business Card</h2>
+            </div>
+            <div class="overlay-description">
+              <h3>Dessert Company</h3>
+            </div>
+          </div>
+      </div>
+
+      <div class="grid-item">
+          <a href="project5.html">
+            <div class="clickable">
+              <img src="img/portfolioLogo.png" alt="Logo">
+            </div>
+          </a>
+          <div class="overlay-two">
+            <div class="overlay-title">
+              <h2>Logo</h2>
+            </div>
+            <div class="overlay-description">
+              <h3>Sauvier</h3>
+            </div>
+          </div>
+      </div>
+
+      <div class="grid-item">
+          <a href="project4.html">
+            <div class="clickable">
+              <img src="img/portfolioPoster.png" alt="Poster">
+            </div>
+          </a>
+          <div class="overlay-one">
+            <div class="overlay-title">
+              <h2>Poster</h2>
             </div>
             <div class="overlay-description">
               <h3>Dessert Company</h3>
