Graphics Page layout

--- a/graphics.html
+++ b/graphics.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <section id="3d-projects" class="project-grid">
+    <section id="graphics" class="project-grid">
       <div class="grid-item">
           <a href="project3.html">
             <div class="clickable">
