--- a/project5.html
+++ b/project5.html
@@ -51,19 +51,19 @@
 
         <div id="process-one" class="process-img">
           <img src="img/logoProcess/process1.png" alt="Crane Simple">
-          <p>Create line art from sketch and establish the overall scene</p>
+          <p>First iteration with silhouette of a crane with an elegant san-serif font</p>
           <i class="fas fa-arrow-right"></i>
         </div>
 
         <div id="process-two" class="process-img">
           <img src="img/logoProcess/process2.png" alt="Earth Details">
-          <p>Applied base colors from chosen scheme</p>
+          <p>Moved the background to represent an earth behind the crane silhouette</p>
           <i class="fas fa-arrow-right"></i>
         </div>
 
         <div id="process-three" class="process-img">
           <img src="img/logoProcess/process3.png" alt="Dynamic Background Addition">
-          <p>Add dimension through subtle outlines, shading, and highlights</p>
+          <p>More dynamics and symbolism added by adding earth details</p>
           <i class="fas fa-circle"></i>
         </div>
 
@@ -75,7 +75,7 @@
         <a href="project3.html" class="button-cancel">Previous Project</a>
       </div>
       <div class="right-button">
-        <a href="project1.html" class="button-confirm">Next Project</a>
+        <a href="project4.html" class="button-confirm">Next Project</a>
       </div>
     </div>
 
