--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <section id="3d-projects" class="project-grid">
+    <section id="model-projects" class="project-grid">
       <div class="grid-item">
           <a href="project1.html">
             <div class="clickable">
