Corrected Stray Section Tag

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
       </div> -->
 
-    </section>
+    <!-- </section> -->
 
     <footer id="footer" class="category-row">
       <div id="first-link" class="footer-link">
